--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "hydro-bro",
-  "version": "0.0.0",
+  "name": "hydro-app",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "dev": "vite",
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "@types/uuid": "^9.0.2",
     "@vuepic/vue-datepicker": "^5.4.0",
     "bootstrap": "^5.3.1",
     "dexie": "^3.2.4",
